--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1> Welcome to the Seong Ho's Blog </h1>
+            <h1> Seong Ho's Blog </h1>
             <hr>
             <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
